--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,11 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "postcss-loader": "^3.0.0",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
