--- a/assets/package.json
+++ b/assets/package.json
@@ -10,7 +10,8 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "postcss-loader": "^3.0.0",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
