--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
     "postcss-loader": "^3.0.0",
     "tailwindcss": "^1.1.3",
     "turbolinks": "^5.2.0"
